<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adm_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_lo_sentimos" />

        <TextView
            android:id="@+id/adm_tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/gray90"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/adm_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adm_tvTitle"
            android:text="@string/label_no_trailers" />

        <View
            android:id="@+id/adm_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:alpha="0.2"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/adm_mbAcceptOnly"
            app:layout_constraintTop_toBottomOf="@+id/adm_tvMessage" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/adm_mbAcceptOnly"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginBottom="16dp"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:backgroundTint="@color/red40"
            android:text="@string/label_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adm_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>